<resources>
    <!-- MainActivity strings below -->

    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- Label for the overflow menu option that deletes all inventory data [CHAR LIMIT=20] -->
    <string name="delete_all">Delete All</string>

    <!-- Label for the overflow menu option that deletes data in editor view [CHAR LIMIT=20] -->
    <string name="action_delete_title">Delete</string>

    <!-- Label for the overflow menu option that saves data in editor view [CHAR LIMIT=20] -->
    <string name="action_save_title">Save</string>

    <!-- Label for the list item sale button -->
    <string name="sale_button_title">Sale</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50]-->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Toast message in main activity when trying to sale a product with 0 quantity. -->
    <string name="sale_failed">Sale failed, product out of stock.</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="main_delete_dialog_msg">Delete all products stored?</string>
    
    <!-- -->
    <string name="no_data">There is no data to delete.</string>

    <!-- -->
    <string name="out_of_stock">Out Of Stock</string>

    <!-- EditorActivity Strings below -->

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when trying to order a product from a missing supplier data [CHAR LIMIT=NONE] -->
    <string name="supplier_missing_data">Could not order, some supplier data is missing</string>

    <!-- Text hint for product [CHAR LIMIT=30] -->
    <string name="product_title">Product</string>

    <!-- Text hint for supplier [CHAR LIMIT=30]  -->
    <string name="supplier_title">Supplier</string>

    <!-- Text hint for image field in the editor [CHAR LIMIT=30] -->
    <string name="image_title">Image</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="quantity_title">Quantity</string>

    <!-- Text hint for product name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_price">Price</string>

    <!-- Text hint for supplier's email in the editor [CHAR LIMIT=30] -->
    <string name="hint_email">Email</string>

    <!-- Button text for order more product from supplier [CHAR LIMIT=20]-->
    <string name="order_more">Order More</string>

    <!-- Initial value for quantity field in the editor [CHAR LIMIT=12]-->
    <string name="zero">0</string>

    <!-- Error message above product name field [CHAR LIMIT=8]-->
    <string name="error_product_name">Product name required.</string>

    <!-- Error message above product price field [CHAR LIMIT=8]-->
    <string name="error_product_price">Product price required.</string>

    <!-- Error message above product image field [CHAR LIMIT=8] -->
    <string name="error_product_image">Product image required.</string>

    <!-- Error message above supplier name field in the editor [CHAR LIMIT=8] -->
    <string name="error_supplier_name">Supplier name required.</string>

    <!-- Error message above supplier email field in the editor [CHAR LIMIT=8] -->
    <string name="error_supplier_email">Supplier email required.</string>
</resources>
