<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="24dp"
    android:paddingEnd="16dp"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Product Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_title"
            android:paddingBottom="12dp"/>

        <!-- Product Name -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/product_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <!-- Product Price -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_price"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/product_price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <!-- Product Image -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="24dp"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_title" />

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:background="@android:color/darker_gray"
                android:scaleType="centerCrop" />
        </LinearLayout>

        <!-- Product Quantity -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="24dp"
            android:paddingStart="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_title" />

            <android.support.design.button.MaterialButton
                android:id="@+id/minus_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                app:icon="@drawable/ic_remove_white"
                app:iconGravity="textStart" />

            <TextView
                android:id="@+id/quantity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <android.support.design.button.MaterialButton
                android:id="@+id/plus_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="12dp"
                app:icon="@drawable/ic_add_white"
                app:iconGravity="textStart" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/supplier_title" />

        <!-- Supplier Name -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/supplier_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <!-- Supplier Email -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/supplier_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.button.MaterialButton
            android:id="@+id/order_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/order_more"
            android:layout_gravity="end" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>